More potential fixes for display issues on mobile devices.

--- a/css/style.css
+++ b/css/style.css
@@ -68,11 +68,11 @@ ul > li {
 @media only screen and (max-width: 768px) {
 	.container {
 		display: flex;
-		flex-direction: row;
+		flex-direction: column;
 		justify-content: center;
 		text-align: center;
 		overflow: hidden;
-		margin-top: 20vh;
+		margin-top: 10vh;
 		background-color: #242628;
 		border-style: solid;
 		border-color: #0f1011;
@@ -81,4 +81,9 @@ ul > li {
 		box-shadow: 8px 8px 8px #000000;
 		width: 100%;
 	}
+
+	.container > .row1 {
+	display: flex;
+	flex-direction: column;
+}
 }
